--- a/bsjfourth.css
+++ b/bsjfourth.css
@@ -278,11 +278,37 @@ body {
 }
 
 .bsj-fourth-maincard{
+    
     background-color: var(--background-color);
     padding: 50px 30px;
-    transition: all ease-in-out 0.4s;
+    /*애니메이션 제외 transition: all ease-in-out 0.4s;*/
+    text-decoration: none;
+    box-shadow:0px 5px 90px 0px rgba(0, 0, 0, 0.1);
 }
 
 .bsj-fourth-maincard:hover{
     transform: translateY(-10px);
+}
+
+.bsj-fourth-maincard-icon{
+    width:100%;
+    height: 44px;
+    margin-bottom: 10px;
+    color: var(--accent-color);
+    font-size: 36px;
+    transition: 0.3s;
+}
+.bsj-fourth-maincard-title{
+    color: var(--heading-color);
+    font-family: var(--heading-font);
+    font-weight: 700;
+    margin-bottom: 15px;
+    font-size: 20px;
+}
+
+.bsj-fourth-maincard-details{
+    line-height: 24px;
+    font-size: 14px;
+    margin-bottom: 0;
+    color:var(--default-color);
 }
