--- a/bsj457.css
+++ b/bsj457.css
@@ -272,8 +272,9 @@ body {
     display: grid;
     grid-template-columns: repeat(4,1fr);
     column-gap: 24px;
-    margin: 0 51.5px;
-    height: 275px;
+    margin:0 51.5px;
+    padding-right: calc(1.5rem* .5);
+    padding-left: calc(1.5rem* .5);
 
 }
 
