--- a/kes.css
+++ b/kes.css
@@ -74,28 +74,42 @@
     80% { transform: translateX(120%);}
     98% { transform: translateX(120%);}
 }
+@keyframes kes__slide2 {
+    18% { transform: translateX(120%); }
+    20% { transform: translateX(0%); }
+    38% { transform: translateX(0%); }
+    40% { transform: translateX(-120%);}
+    41% { transform: scale(0);}
+}
 
 .kes--testimonials-body-humaninfo {
     display: flex;
     flex-direction: column;
     align-items: center;
-    animation: kes__slide 25s infinite;
     position: absolute;
 }
 .kes--testimonials-body-humaninfo:nth-child(1) {
+    animation: kes__slide 25s infinite;
     animation-delay: 0s;
 }
 .kes--testimonials-body-humaninfo:nth-child(2) {
-    animation-delay: 5s;
+    transform: translateX(120%);
+    animation: kes__slide2 25s infinite;
 }
 .kes--testimonials-body-humaninfo:nth-child(3) {
-    animation-delay: 10s;
+    transform: translateX(120%);
+    animation: kes__slide2 25s infinite;
+    animation-delay: 5s;
 }
 .kes--testimonials-body-humaninfo:nth-child(4) {
-    animation-delay: 15s;
+    transform: translateX(120%);
+    animation: kes__slide2 25s infinite;
+    animation-delay: 10s;
 }
 .kes--testimonials-body-humaninfo:nth-child(5) {
-    animation-delay: 20s;
+    transform: translateX(120%);
+    animation: kes__slide2 25s infinite;
+    animation-delay: 15s;
 }
 
 .kes--testimonials-body-humaninfo-image {
